# Scripts-Increibles

./: .gitignore  CONTROL.py  DIM.py  Encriptar.py  Organizador_Archivos.py  README.md  VideosYT.py  pyproject.toml  request_colorMagic.py  revolucion.py
Downloads_YT/: FOVOS - Feel The Rhythm (Big Room ⧸ Techno).mp4.part
